--- a/scan/templates/scan/subscription_list.html
+++ b/scan/templates/scan/subscription_list.html
@@ -12,3 +12,4 @@
 {% endif %}
     <a href="{% url 'scan:subscription_create' %}">New subscription</a>
     <a href="{% url 'scan:scan' %}">Scanner</a>
+    <a href="{% url 'scan:report' %}">Report</a>
